--- a/jkt48-pm/p/register.html
+++ b/jkt48-pm/p/register.html
@@ -40,11 +40,11 @@
         <p class="modal-title">REGISTER</p><br/>
 
         <div class="alert alert-primary text-center" role="alert">
-            <span class="fw-bold" style="font-size: smaller;">
+            <p class="fw-bold" style="font-size: smaller;">
                 Ini adalah layanan JKT48PMMMWWW dimana kamu bisa mengakses messages, pictures, dan voice notes dari member JKT48 secara berlangganan.
-                Layanan ini tidak menyediakan notifikasi pesan masuk ataupun ucapan ulang tahun.<br/><button type="button" class="mt-2 w-100 btn btn-outline-primary btn-sm" data-bs-toggle="modal"
+                <span style="color: red;">Layanan ini tidak menyediakan notifikasi pesan masuk ataupun ucapan ulang tahun.</span><button type="button" class="mt-2 w-100 btn btn-outline-primary btn-sm" data-bs-toggle="modal"
                 data-bs-target="#myModal">Lihat Demo</button>
-            </span>
+            </p>
         </div>
 
         <div class="modal fade" id="myModal">
