--- a/validitech/p/login-kreator.html
+++ b/validitech/p/login-kreator.html
@@ -44,10 +44,10 @@
         <form class="bg-body-tertiary p-5">
             <h1 class="text-center mb-5">Log In</h1>
             <!-- Email Pengguna -->
-            <input id="email" class="form-control mb-3" type="text" placeholder="Email" required>
+            <input id="email" class="form-control mb-3" type="text" placeholder="Email">
             <!-- Password Pengguna -->
             <div class="input-group mb-3">
-                <input class="form-control" type="password" id="password" placeholder="Password" required>
+                <input class="form-control" type="password" id="password" placeholder="Password" >
                 <button class="btn btn-outline-light" type="button" id="togglePassword">
                     <i class="bi bi-eye-slash" id="toggleIcon"></i>
                 </button>
