--- a/validitech/p/post.html
+++ b/validitech/p/post.html
@@ -307,11 +307,11 @@
                     template.innerHTML = `
                             <tr>
                                 <td>${item0[i]}</th>
-                                <td><input required class="form-check-input" type="radio" name="${indikatorData[0] + "-" + i}" id="${indikatorData[0] + "-nilai1-" + i})}" value="1"></td>
-                                <td><input required class="form-check-input" type="radio" name="${indikatorData[0] + "-" + i}" id="${indikatorData[0] + "-nilai2-" + i})}" value="2"></td>
-                                <td><input required class="form-check-input" type="radio" name="${indikatorData[0] + "-" + i}" id="${indikatorData[0] + "-nilai3-" + i})}" value="3"></td>
-                                <td><input required class="form-check-input" type="radio" name="${indikatorData[0] + "-" + i}" id="${indikatorData[0] + "-nilai4-" + i})}" value="4"></td>
-                                <td><input required class="form-check-input" type="radio" name="${indikatorData[0] + "-" + i}" id="${indikatorData[0] + "-nilai5-" + i})}" value="5"></td>
+                                <td><input  class="form-check-input" type="radio" name="${indikatorData[0] + "-" + i}" id="${indikatorData[0] + "-nilai1-" + i})}" value="1"></td>
+                                <td><input  class="form-check-input" type="radio" name="${indikatorData[0] + "-" + i}" id="${indikatorData[0] + "-nilai2-" + i})}" value="2"></td>
+                                <td><input  class="form-check-input" type="radio" name="${indikatorData[0] + "-" + i}" id="${indikatorData[0] + "-nilai3-" + i})}" value="3"></td>
+                                <td><input  class="form-check-input" type="radio" name="${indikatorData[0] + "-" + i}" id="${indikatorData[0] + "-nilai4-" + i})}" value="4"></td>
+                                <td><input  class="form-check-input" type="radio" name="${indikatorData[0] + "-" + i}" id="${indikatorData[0] + "-nilai5-" + i})}" value="5"></td>
                             </tr>`
                         .trim()
                     const row = template.content.firstChild
@@ -339,11 +339,11 @@
                     template.innerHTML = `
                             <tr>
                                 <td>${item1[i]}</th>
-                                <td><input required class="form-check-input" type="radio" name="${indikatorData[1] + "-" + i}" id="${indikatorData[1] + "-nilai1-" + i})}" value="1"></td>
-                                <td><input required class="form-check-input" type="radio" name="${indikatorData[1] + "-" + i}" id="${indikatorData[1] + "-nilai2-" + i})}" value="2"></td>
-                                <td><input required class="form-check-input" type="radio" name="${indikatorData[1] + "-" + i}" id="${indikatorData[1] + "-nilai3-" + i})}" value="3"></td>
-                                <td><input required class="form-check-input" type="radio" name="${indikatorData[1] + "-" + i}" id="${indikatorData[1] + "-nilai4-" + i})}" value="4"></td>
-                                <td><input required class="form-check-input" type="radio" name="${indikatorData[1] + "-" + i}" id="${indikatorData[1] + "-nilai5-" + i})}" value="5"></td>
+                                <td><input  class="form-check-input" type="radio" name="${indikatorData[1] + "-" + i}" id="${indikatorData[1] + "-nilai1-" + i})}" value="1"></td>
+                                <td><input  class="form-check-input" type="radio" name="${indikatorData[1] + "-" + i}" id="${indikatorData[1] + "-nilai2-" + i})}" value="2"></td>
+                                <td><input  class="form-check-input" type="radio" name="${indikatorData[1] + "-" + i}" id="${indikatorData[1] + "-nilai3-" + i})}" value="3"></td>
+                                <td><input  class="form-check-input" type="radio" name="${indikatorData[1] + "-" + i}" id="${indikatorData[1] + "-nilai4-" + i})}" value="4"></td>
+                                <td><input  class="form-check-input" type="radio" name="${indikatorData[1] + "-" + i}" id="${indikatorData[1] + "-nilai5-" + i})}" value="5"></td>
                             </tr>`
                         .trim()
                     const row = template.content.firstChild
@@ -371,11 +371,11 @@
                     template.innerHTML = `
                             <tr>
                                 <td>${item2[i]}</th>
-                                <td><input required class="form-check-input" type="radio" name="${indikatorData[2] + "-" + i}" id="${indikatorData[2] + "-nilai1-" + i})}" value="1"></td>
-                                <td><input required class="form-check-input" type="radio" name="${indikatorData[2] + "-" + i}" id="${indikatorData[2] + "-nilai2-" + i})}" value="2"></td>
-                                <td><input required class="form-check-input" type="radio" name="${indikatorData[2] + "-" + i}" id="${indikatorData[2] + "-nilai3-" + i})}" value="3"></td>
-                                <td><input required class="form-check-input" type="radio" name="${indikatorData[2] + "-" + i}" id="${indikatorData[2] + "-nilai4-" + i})}" value="4"></td>
-                                <td><input required class="form-check-input" type="radio" name="${indikatorData[2] + "-" + i}" id="${indikatorData[2] + "-nilai5-" + i})}" value="5"></td>
+                                <td><input  class="form-check-input" type="radio" name="${indikatorData[2] + "-" + i}" id="${indikatorData[2] + "-nilai1-" + i})}" value="1"></td>
+                                <td><input  class="form-check-input" type="radio" name="${indikatorData[2] + "-" + i}" id="${indikatorData[2] + "-nilai2-" + i})}" value="2"></td>
+                                <td><input  class="form-check-input" type="radio" name="${indikatorData[2] + "-" + i}" id="${indikatorData[2] + "-nilai3-" + i})}" value="3"></td>
+                                <td><input  class="form-check-input" type="radio" name="${indikatorData[2] + "-" + i}" id="${indikatorData[2] + "-nilai4-" + i})}" value="4"></td>
+                                <td><input  class="form-check-input" type="radio" name="${indikatorData[2] + "-" + i}" id="${indikatorData[2] + "-nilai5-" + i})}" value="5"></td>
                             </tr>`
                         .trim()
                     const row = template.content.firstChild
@@ -403,11 +403,11 @@
                     template.innerHTML = `
                             <tr>
                                 <td>${item3[i]}</th>
-                                <td><input required class="form-check-input" type="radio" name="${indikatorData[3] + "-" + i}" id="${indikatorData[3] + "-nilai1-" + i})}" value="1"></td>
-                                <td><input required class="form-check-input" type="radio" name="${indikatorData[3] + "-" + i}" id="${indikatorData[3] + "-nilai2-" + i})}" value="2"></td>
-                                <td><input required class="form-check-input" type="radio" name="${indikatorData[3] + "-" + i}" id="${indikatorData[3] + "-nilai3-" + i})}" value="3"></td>
-                                <td><input required class="form-check-input" type="radio" name="${indikatorData[3] + "-" + i}" id="${indikatorData[3] + "-nilai4-" + i})}" value="4"></td>
-                                <td><input required class="form-check-input" type="radio" name="${indikatorData[3] + "-" + i}" id="${indikatorData[3] + "-nilai5-" + i})}" value="5"></td>
+                                <td><input  class="form-check-input" type="radio" name="${indikatorData[3] + "-" + i}" id="${indikatorData[3] + "-nilai1-" + i})}" value="1"></td>
+                                <td><input  class="form-check-input" type="radio" name="${indikatorData[3] + "-" + i}" id="${indikatorData[3] + "-nilai2-" + i})}" value="2"></td>
+                                <td><input  class="form-check-input" type="radio" name="${indikatorData[3] + "-" + i}" id="${indikatorData[3] + "-nilai3-" + i})}" value="3"></td>
+                                <td><input  class="form-check-input" type="radio" name="${indikatorData[3] + "-" + i}" id="${indikatorData[3] + "-nilai4-" + i})}" value="4"></td>
+                                <td><input  class="form-check-input" type="radio" name="${indikatorData[3] + "-" + i}" id="${indikatorData[3] + "-nilai5-" + i})}" value="5"></td>
                             </tr>`
                         .trim()
                     const row = template.content.firstChild
