--- a/validitech/p/register.html
+++ b/validitech/p/register.html
@@ -42,29 +42,29 @@
             <!-- Nama Lengkap Pengguna -->
             <label>Nama Lengkap</label>
             <div class="d-flex mb-3">
-                <input id="namaDepan" class="form-control me-1" type="text" placeholder="Nama Depan" required>
-                <input id="namaBelakang" class="form-control ms-1" type="text" placeholder="Nama Belakang" required>
+                <input id="namaDepan" class="form-control me-1" type="text" placeholder="Nama Depan" >
+                <input id="namaBelakang" class="form-control ms-1" type="text" placeholder="Nama Belakang" >
             </div>
 
             <!-- Username Pengguna -->
             <label>Username</label>
             <div class="input-group mb-3">
                 <span class="input-group-text">@</span>
-                <input id="username" class="form-control" type="text" placeholder="Username" required>
+                <input id="username" class="form-control" type="text" placeholder="Username" >
             </div>
 
             <!-- Email Pengguna -->
             <label>Email</label>
-            <input id="email" class="form-control mb-3" type="text" placeholder="Email" required>
+            <input id="email" class="form-control mb-3" type="text" placeholder="Email" >
 
             <!-- No. Telepon -->
             <label>No. Telepon</label>
-            <input id="tel" class="form-control mb-3" type="tel" placeholder="No. Telepon/Whatsapp" required>
+            <input id="tel" class="form-control mb-3" type="tel" placeholder="No. Telepon/Whatsapp" >
 
             <!-- Password Pengguna -->
             <label>Password</label>
             <div class="input-group mb-3">
-                <input class="form-control" type="password" id="password" placeholder="Password" required>
+                <input class="form-control" type="password" id="password" placeholder="Password" >
                 <button class="btn btn-outline-light" type="button" id="togglePassword">
                     <i class="bi bi-eye-slash" id="togglePasswordIcon"></i>
                 </button>
@@ -74,7 +74,7 @@
             <label>Konfirmasi Password</label>
             <div class="input-group mb-3">
                 <input class="form-control" type="password" id="konfirmasiPassword" placeholder="Konfirmasi Password"
-                    required>
+                    >
                 <button class="btn btn-outline-light" type="button" id="toggleKonfirmasiPassword">
                     <i class="bi bi-eye-slash" id="toggleKonfirmasiPasswordIcon"></i>
                 </button>
@@ -83,7 +83,7 @@
             <!-- Role Pengguna -->
             <div style="display: none;">
             <label for="#role">Tipe Akun</label>
-            <select class="form-select mb-3" id="role" required>
+            <select class="form-select mb-3" id="role" >
                 <option value="validator">Validator</option>
                 <option value="kreator">Kreator</option>
             </select>
@@ -91,7 +91,7 @@
 
             <div id="instansi" style="display: none;">
                 <label>Instansi</label>
-                <input id="affiliation" class="form-control mb-3" type="text" placeholder="Instansi" required>
+                <input id="affiliation" class="form-control mb-3" type="text" placeholder="Instansi" >
             </div>
             
             <!-- Foto Profil -->
