--- a/validitech/p/submit.html
+++ b/validitech/p/submit.html
@@ -48,25 +48,25 @@
                 <input id="nama" class="form-control me-3" type="text" disabled>
                 <input id="email" class="form-control ms-3" type="text" disabled>
             </div>
-            <input id="judul" class="form-control mb-3" type="text" placeholder="Judul Produk" required>
+            <input id="judul" class="form-control mb-3" type="text" placeholder="Judul Produk" >
             <textarea id="deskripsi" class="form-control mb-3" type="text" placeholder="Deskripsi Produk" rows="5"
-                required></textarea>
+                ></textarea>
             <div class="d-flex mb-3">
-                <select class="form-select me-3" id="kategori" required>
+                <select class="form-select me-3" id="kategori" >
                     <option selected>Pilih Kategori</option>
                     <option value="modul">Bahan Ajar</option>
                     <option value="media">Media Pembelajaran</option>
                 </select>
-                <select class="form-select ms-3" id="tipe" required>
+                <select class="form-select ms-3" id="tipe" >
                     <option selected>Pilih Tipe Produk</option>
                     <option value="file">File</option>
                     <option value="link">Link URL</option>
                 </select>
             </div>
             <label for="#linkMedia">Masukan Link Produk</label>
-            <input id="linkMedia" class="form-control mb-3" type="url" placeholder="Masukkan Link" disabled required>
+            <input id="linkMedia" class="form-control mb-3" type="url" placeholder="Masukkan Link" disabled >
             <label for="#fileMedia">Upload Produk</label>
-            <input id="fileMedia" class="form-control mb-3" type="file" placeholder="Upload Media" disabled required>
+            <input id="fileMedia" class="form-control mb-3" type="file" placeholder="Upload Media" disabled >
 
             <label>Validator yang dipilih: <i id="listValidator"></i></label>
             <div class="w-100 mt-5 table-responsive">
