--- a/validitech/p/profil.html
+++ b/validitech/p/profil.html
@@ -66,24 +66,24 @@
 
                 <!-- Nama Lengkap Pengguna -->
                 <div class="d-flex mt-5 mb-3">
-                    <input id="namaDepan" class="form-control me-1" type="text" placeholder="Nama Depan" required>
-                    <input id="namaBelakang" class="form-control ms-1" type="text" placeholder="Nama Belakang" required>
+                    <input id="namaDepan" class="form-control me-1" type="text" placeholder="Nama Depan" >
+                    <input id="namaBelakang" class="form-control ms-1" type="text" placeholder="Nama Belakang" >
                 </div>
 
                 <!-- Username Pengguna -->
                 <div class="input-group mb-3">
                     <span class="input-group-text">@</span>
-                    <input id="username" class="form-control" type="text" placeholder="Username" required>
+                    <input id="username" class="form-control" type="text" placeholder="Username" >
                 </div>
 
                 <!-- Email Pengguna -->
-                <input id="email" class="form-control mb-3" type="text" placeholder="Email" required>
+                <input id="email" class="form-control mb-3" type="text" placeholder="Email" >
 
                 <!-- No. Telepon -->
-                <input id="tel" class="form-control mb-3" type="tel" placeholder="No. Telepon/Whatsapp" required>
+                <input id="tel" class="form-control mb-3" type="tel" placeholder="No. Telepon/Whatsapp" >
 
                 <!-- Role Pengguna -->
-                <select class="form-select mb-3" id="role" required>
+                <select class="form-select mb-3" id="role" >
                     <option selected>Pilih Tipe Akun</option>
                     <option value="validator">Validator</option>
                     <option value="kreator">Kreator</option>
