--- a/jkt48-pm/p/login.html
+++ b/jkt48-pm/p/login.html
@@ -62,7 +62,7 @@
                 </div>
             </div>
         </div>
-        <form id="login" class="me-5">
+        <form id="login">
 
             <input id="email-login" type="email" class="form-control" placeholder="Email Address"><br />
 
