--- a/jkt48-pm/index.html
+++ b/jkt48-pm/index.html
@@ -85,11 +85,15 @@
                 </div>
             </div>
         </div>
+
         <div class="input-group">
             <select class="form-select" id="member">
             </select>
             <button type="button" class="btn btn-primary" id="get">GET</button>
         </div>
+
+        <button class="btn btn-success mt-3 mb-3" id="next" style="display: none;">Next Page ></button>
+
         <ul class="list-group" id="chat">
             <li class="list-group-item" style="display: none;" id="chat-item"></li>
         </ul>
