--- a/jkt48-pm/index.html
+++ b/jkt48-pm/index.html
@@ -70,14 +70,14 @@
                                 <p style="text-align: left;">Email</p>
                                 <p style="margin-left: auto; font-weight: bold;" id="email"></p>
                             </div>
-                            <div style="display: flex;">
+                            <!--div style="display: flex;">
                                 <p style="text-align: left;">Start Subscription</p>
                                 <p style="margin-left: auto; font-weight: bold;" id="startSubs"></p>
                             </div>
                             <div style="display: flex;">
                                 <p style="text-align: left;">End Subscription</p>
                                 <p style="margin-left: auto; font-weight: bold;" id="endSubs"></p>
-                            </div>
+                            </div-->
                         </div>
 
                         <!-- Modal Footer -->
