--- a/jkt48-pm/p/login.html
+++ b/jkt48-pm/p/login.html
@@ -74,8 +74,8 @@
             </div><br />
 
             <div style="display: flex;">
-                <a href="https://habilihsanproject.github.io/jkt48-pm/p/register" class="btn btn-success" tabindex="-1" role="button" aria-disabled="true" style="margin-right: auto;">Register</a>
-                <button type="button" class="btn btn-warning" onclick="changePassword()" style="margin-right: auto;">Ganti Password</button>
+                <a href="https://habilihsanproject.github.io/jkt48-pm/p/register" class="btn btn-outline-success" tabindex="-1" role="button" aria-disabled="true" style="margin-right: auto;">Register</a>
+                <button type="button" class="btn btn-outline-warning" onclick="changePassword()" style="margin-right: auto;">Ganti Password</button>
                 <button type="submit" class="btn btn-primary">Login</button>
             </div>
         </form>
