--- a/jkt48-pm/p/register.html
+++ b/jkt48-pm/p/register.html
@@ -76,7 +76,7 @@
             </div><br />
 
             <div style="display: flex;">
-                <a href="https://habilihsanproject.github.io/jkt48-pm/p/login" class="btn btn-primary" tabindex="-1" role="button" aria-disabled="true" style="margin-right: auto;">Log In</a>
+                <a href="https://habilihsanproject.github.io/jkt48-pm/p/login" class="btn btn-outline-primary" tabindex="-1" role="button" aria-disabled="true" style="margin-right: auto;">Log In</a>
                 <button type="submit" class="btn btn-success">Register</button>
             </div>
 
