--- a/IPE/index.html
+++ b/IPE/index.html
@@ -165,7 +165,7 @@
 
         <section id="perolehan" class="w-100 text-center mb-5">
             <h1 class="mb-3">Perolehan Pilihan</h1>
-            <div class="w-50 ms-auto me-auto">
+            <div class="w-100 ms-auto me-auto">
                 <canvas id="grafik"></canvas>
             </div>
         </section>
@@ -175,21 +175,21 @@
         <section id="alasan" class="row text-center mb-5">
             <h1 class="mb-3">Alasan Pemilih</h1>
             <div class="col-md-4">
-                <div class="card p-3">
+                <div class="card p-3 ms-1 me-1 mb-3">
                     <h5>Anies Baswedan &<br />Muhaimin Iskandar</h5>
                     <ul class="list-group list-group-flush mt-3" id="list01"></ul>
                 </div>
             </div>
 
             <div class="col-md-4">
-                <div class="card p-3">
+                <div class="card p-3 ms-1 me-1 mb-3">
                     <h5>Prabowo Subianto &<br />Gibran Rakabuming</h5>
                     <ul class="list-group list-group-flush mt-3" id="list02"></ul>
                 </div>
             </div>
 
             <div class="col-md-4">
-                <div class="card p-3">
+                <div class="card p-3 ms-1 me-1 mb-3">
                     <h5>Ganjar Pranowo &<br />Mahfud MD</h5>
                     <ul class="list-group list-group-flush mt-3" id="list03"></ul>
                 </div>
