--- a/IPE/index.html
+++ b/IPE/index.html
@@ -37,7 +37,7 @@
     </nav>
 
     <!-- Container -->
-    <div class="p-5">
+    <div class="p-5 w-75 ms-auto me-auto">
         <div id="pemilih" class="mb-3 text-center w-100"></div>
 
         <div class="alert alert-info" style="text-align: justify;">
