--- a/IPE/index.html
+++ b/IPE/index.html
@@ -29,15 +29,15 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary mb-5">
         <div class="container-fluid ms-5 me-5">
-            <a href="#" class="navbar-brand fw-bold text-danger mb-0">IPE<span class="text-body">2024</span></a>
+            <a href="#" class="navbar-brand fs-3 fw-bold text-danger mb-0">IPE<span class="text-body">2024</span></a>
             <button id="tema" onclick="aturTema()" class="btn text-body mdi mdi-weather-night"></button>
         </div>
     </nav>
 
     <!-- Container -->
-    <div class="w-100 ms-auto me-auto">
+    <div class="ms-3 me-3 p-3">
         <div id="pemilih" class="mb-3 text-center w-100"></div>
 
         <div class="alert alert-info" style="text-align: justify;">
@@ -452,12 +452,7 @@
     footer {
         position: fixed;
         bottom: 0;
+        left: 0;
         width: -webkit-fill-available;
-    }
-
-    body {
-        max-width: 720px !important;
-        margin-left: auto !important;
-        margin-right: auto !important;
     }
 </style>
