--- a/IPE/index.html
+++ b/IPE/index.html
@@ -63,7 +63,7 @@
                         </div>
                         <div class="card-body">
                             <p class="card-title fs-4 fw-bold">Anies Baswedan &<br />Muhaimin Iskandar</p>
-                            <p class="card-text">Calon Presiden No. 01</p>
+                            <p class="card-text">Calon Presiden dan Wakil Presiden No. 01</p>
                         </div>
                     </div>
             </div>
@@ -99,7 +99,7 @@
                         </div>
                         <div class="card-body">
                             <p class="card-title fs-4 fw-bold">Prabowo Subianto &<br />Gibran Rakabuming</p>
-                            <p class="card-text">Calon Presiden No. 02</p>
+                            <p class="card-text">Calon Presiden dan Wakil Presiden  No. 02</p>
                         </div>
                     </div>
             </div>
@@ -135,7 +135,7 @@
                         </div>
                         <div class="card-body">
                             <p class="card-title fs-4 fw-bold">Ganjar Pranowo &<br />Mahfud MD</p>
-                            <p class="card-text">Calon Presiden No. 03</p>
+                            <p class="card-text">Calon Presiden dan Wakil Presiden  No. 03</p>
                         </div>
                     </div>
             </div>
