--- a/IPE/index.html
+++ b/IPE/index.html
@@ -162,7 +162,7 @@
 
             <div class="alert alert-info w-50 mt-3 ms-auto me-auto">
                 <p class="mb-0">Yuk kenalan lebih dalam sama ketiga Paslon dan melek politik bersama</p>
-                <a href="https://bijakmemilih.id/" target="_blank">
+                <a href="https://www.bijakmemilih.id/profil-kandidat" target="_blank">
                     <img class="w-25 bijakmemilih" id="bijakmemilih" src="https://framerusercontent.com/images/g243IrDgkcrmrzEKfhhXv58gO8.png">
                 </a>
             </div>
